# ferrispass

./: .gitignore  Cargo.toml  README.md  SECURITY.md  cliff.toml  skills-lock.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
bundle/: minisign-pub.txt
bundle/macos/: Info.plist  entitlements.plist
docs/: architecture.md  getting-started-sharepoint.md  release-process.md
examples/: dump_xml.rs
scripts/: build-mac.sh  setup-minisign.sh
src/: clipboard.rs  clipboard_macos.rs  clipboard_portable.rs  favicon.rs  lib.rs  main.rs  session_lock.rs
src/app/: actions.rs  assets.rs  mod.rs  recents.rs  search.rs  settings.rs  state.rs  sync_history.rs  time.rs
src/autotype/: hotkey.rs  matcher.rs  mod.rs  permissions.rs  sequence.rs  typer.rs  window.rs
src/biometric/: macos.rs  memory.rs  mod.rs  noop.rs  registry.rs
src/domain/: mod.rs  vault.rs
src/keepass/: document.rs  limits.rs  merge.rs  mod.rs  password_gen.rs  repository.rs
src/launch/: mod.rs  sap.rs  sweeper.rs  tempfile.rs
src/sync/: auth.rs  config.rs  graph.rs  http.rs  mod.rs  service.rs  tokens.rs
src/ui/: app_shell.rs  icons.rs  mod.rs  palette.rs  theme.rs  vault_browser.rs
src/ui/screens/: about.rs  add_entry.rs  add_group.rs  add_vault.rs  conflict.rs  connect.rs  mod.rs  settings.rs  sync_settings.rs  unlock.rs  vault.rs  vault_switcher.rs  welcome.rs  whats_new.rs
src/ui/widgets/: atoms.rs  brand.rs  buttons.rs  command_row.rs  entry_chrome.rs  interaction.rs  mod.rs  password.rs  provider_row.rs  secret_input.rs  settings_form.rs  sync_row.rs  toggle_row.rs  update_chip.rs
src/update/: client.rs  info.rs  macos_installer.rs  mod.rs  notes.rs  status.rs
