[package]
name = "ferrispass"
version = "0.3.0"
authors = ["Elias Tilegant <45147025+elias-tilegant@users.noreply.github.com>"]
edition = "2024"
publish = false
license = "GPL-3.0-or-later"
description = "A native, KeePass-compatible password manager for macOS, written in Rust on GPUI."
readme = "README.md"
repository = "https://github.com/elias-tilegant/ferrispass"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0
incremental = false

[dependencies]
# Pinned to the elias-tilegant/keepass-rs fork that carries three KDBX 4
# write-path interop fixes (AES-KDF UUID, omit-None-Option XML fields,
# base64 timestamps). The upstream crate's `save_kdbx4` path produces files
# unreadable by KeePass2 / KeePassXC without these patches. Re-evaluate the
# pin if those fixes land upstream.
keepass = { git = "https://github.com/elias-tilegant/keepass-rs", rev = "db05af8", features = ["save_kdbx4", "totp"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zxcvbn = { version = "3", default-features = false }
thiserror = "2"
rand = "0.9"
# SharePoint sync stack. ureq stays sync (runs cleanly inside cx.background_spawn
# without dragging tokio in). keyring uses the macOS Keychain on Darwin.
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `apple-native` enables the macOS Keychain backend (the only platform we
# verify in this MVP). Linux/Windows users can build with their own feature
# flags but those code paths aren't tested.
keyring = { version = "3", features = ["apple-native"] }
url = "2"
sha2 = "0.10"
# Auto-update: cross-platform updater (macOS/Linux/Windows) by the Tauri team.
# Verifies update bundles via embedded minisign Ed25519 public key, downloads
# new build over HTTPS, atomic-replaces the .app and restarts.
cargo-packager-updater = "0.2"
semver = "1"
# Used to wrap the embedded minisign public key in base64 at runtime.
# `cargo-packager-updater` expects `Config::pubkey` as base64(file content),
# not the raw minisign-pub.txt — see `update/client.rs::build_config`.
base64 = "0.22"
# Direct uuid dep so merge.rs can re-hydrate EntryId from a stringified
# UUID (`EntryId::from_uuid(Uuid::parse_str(s)?)`). Same crate the keepass
# dep already pulls in transitively; pinning major matches keepass-rs's
# expectation (1.x).
uuid = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
