[package]
name = "ferrispass"
version = "0.6.1"
authors = ["Elias Tilegant <45147025+elias-tilegant@users.noreply.github.com>"]
edition = "2024"
publish = false
license = "GPL-3.0-or-later"
description = "A native, KeePass-compatible password manager for macOS, written in Rust on GPUI."
readme = "README.md"
repository = "https://github.com/elias-tilegant/ferrispass"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0
incremental = false

[dependencies]
# Pinned to the elias-tilegant/keepass-rs fork that carries three KDBX 4
# write-path interop fixes (AES-KDF UUID, omit-None-Option XML fields,
# base64 timestamps). The upstream crate's `save_kdbx4` path produces files
# unreadable by KeePass2 / KeePassXC without these patches. Re-evaluate the
# pin if those fixes land upstream.
keepass = { git = "https://github.com/elias-tilegant/keepass-rs", rev = "db05af8", features = ["save_kdbx4", "totp", "_merge"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
# Keep both Longbridge crates on the same tested source revision. Their manifest
# references Zed without a rev, so Cargo.lock owns that one shared GPUI SourceId.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b004e595cf5de98a73b6b561394a559a94ae1e2a" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "b004e595cf5de98a73b6b561394a559a94ae1e2a" }
rust-embed = "8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zxcvbn = { version = "3", default-features = false }
thiserror = "2"
rand = "0.9"
# SharePoint metadata remains synchronous through ureq. Vault and update-bundle
# transfers use reqwest's async transport inside a small dedicated Tokio runtime:
# unlike ureq 2.x, its total timeout covers DNS, pooled connections, request-body
# writes, response headers, and response-body reads.
ureq = { version = "2", features = ["json", "tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `apple-native` enables the macOS Keychain backend (the only platform we
# verify in this MVP). Linux/Windows users can build with their own feature
# flags but those code paths aren't tested.
keyring = { version = "3", features = ["apple-native"] }
url = "2"
sha2 = "0.10"
# Auto-update: cargo-packager parses cross-platform release metadata. FerrisPass
# verifies signed metadata and uses its own transactional installer on macOS.
cargo-packager-updater = "0.2"
minisign-verify = "0.2"
semver = "1"
# Used to wrap the embedded minisign public key in base64 at runtime.
# `cargo-packager-updater` expects `Config::pubkey` as base64(file content),
# not the raw minisign-pub.txt — see `update/client.rs::build_config`.
base64 = "0.22"
# Direct uuid dep so merge.rs can re-hydrate EntryId from a stringified
# UUID (`EntryId::from_uuid(Uuid::parse_str(s)?)`). Same crate the keepass
# dep already pulls in transitively; pinning major matches keepass-rs's
# expectation (1.x).
uuid = "1"

# Auto-type stack. The crates encapsulate macOS FFI internally so our
# workspace `unsafe_code = "forbid"` lint stays intact — `src/autotype/`
# only ever calls into safe wrappers. global-hotkey is the Tauri team's
# Carbon `RegisterEventHotKey` wrapper; enigo synthesises CGEvent
# keystrokes; active-win-pos-rs reads NSWorkspace + AX for the
# foreground window title; macos-accessibility-client wraps
# `AXIsProcessTrustedWithOptions` so we can probe and request the TCC
# Accessibility grant required for both keystroke synthesis and AX
# window-title reads. All four compile on Linux (no-op'd at the
# `cfg(target_os = "macos")` boundaries inside `src/autotype/`) so
# `cargo check` on dev Linux boxes still works.
global-hotkey = "0.8"
enigo = "0.6"
active-win-pos-rs = "0.10"
macos-accessibility-client = "0.0"

# Local fuzzy search ranker for the entry list. Pure in-memory, no index on
# disk — keeps with the rule that no plaintext vault metadata may be persisted.
nucleo-matcher = "0.3"

# Biometric unlock. `zeroize` is used only on the cleartext-password buffer
# between the OS keychain handing it back and `KeePassRepository::open`
# consuming it — a narrow window that's worth wiping. `security-framework`
# is macOS-only; non-Apple targets fall back to the noop store in
# `src/biometric/noop.rs`, so cargo check still passes on Linux/Windows.
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
async-channel = "2"
flate2 = "1"
libc = "0.2"
tar = "0.4"
tempfile = "3"
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"
# Biometric verification for Touch ID. The keychain item itself lives in
# the legacy file-based macOS keychain (no entitlement required); the
# OS biometric prompt is driven separately via LAContext from this
# crate. This split is the same pattern Bitwarden / 1Password use for
# their Developer-ID-distributed Mac builds — the iOS-style
# `kSecAttrAccessControl` ACL would force the data-protection keychain,
# which isn't reachable without an App-Store provisioning profile.
# `objc2-local-authentication` wraps the LocalAuthentication framework
# on top of the `objc2` runtime we already pull in transitively via
# gpui. The bindings still expose `unsafe fn` for ordinary calls, so
# `src/biometric/macos.rs` opts into `#![allow(unsafe_code)]` for a
# small, audited surface (LAContext construction + evaluatePolicy +
# the NSError deref in the reply block); that's why the workspace lint
# is `unsafe_code = "deny"` rather than `forbid`.
objc2-local-authentication = "0.3"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSPasteboard", "NSPasteboardItem", "NSWorkspace"] }
objc2-foundation = "0.3"
objc2 = "0.6"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"

[lints.rust]
# `deny` (rather than `forbid`) so a single targeted module — currently
# only `src/biometric/macos.rs`, which wraps LocalAuthentication FFI
# whose bindings expose `unsafe fn` even for ordinary calls — can opt
# in with a documented `#![allow(unsafe_code)]`. Every other file in
# the workspace still fails the build on the first `unsafe` block; the
# allow-list lives in code review.
unsafe_code = "deny"
